# fileserve-rs

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
client/: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
client/src/: app.d.ts  app.html
client/src/lib/: types.ts
client/src/lib/actions/: clickOutside.ts
client/src/lib/components/: AudioPlayer.svelte  DeleteConfirm.svelte  EmptyState.svelte  FileBrowser.svelte  FileIcon.svelte  GridTile.svelte  Icon.svelte  Logo.svelte  PropertiesModal.svelte  RenameModal.svelte  SearchBox.svelte  Sidebar.svelte  ThemeToggle.svelte  Toast.svelte  TopBar.svelte  UploadModal.svelte  VideoPlayer.svelte
client/src/lib/components/ui/: index.ts  tv.ts
client/src/lib/mock/: data.ts
client/src/lib/services/: api.ts  audit.ts  auth.ts  files.ts  session.ts  settings.ts  users.ts
client/src/lib/stores/: auth.svelte.ts  prefs.svelte.ts  quota.svelte.ts  toast.svelte.ts
client/src/lib/utils/: file.ts  player.ts
client/src/routes/: +layout.svelte  +page.svelte  layout.css
client/src/routes/(app)/: +layout.svelte
client/src/routes/design/: +page.svelte
client/src/routes/files/: +page.svelte
client/src/routes/login/: +page.svelte
migrations/: 20260517144924_db_init.sql  20260714111656_add_upload.sql  20260715000000_add_upload_computed_checksum.sql  20260715010000_add_files.sql  20260722120000_add_user_quota_status.sql  20260723000000_add_settings.sql  20260723120000_add_files_public.sql
scripts/: seed.sql
src/: config.rs  extractors.rs  main.rs  middlewares.rs
src/models/: file.rs  mod.rs  settings.rs  upload.rs  user.rs
src/routes/: mod.rs  views.rs
src/routes/api/: auth.rs  files.rs  mod.rs  settings.rs  types.rs  users.rs
src/utils/: mod.rs  tus.rs
(+47 files in other folders)
