[package]
name = "fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.13.0", features = ["cookies"] }
bcrypt = "0.19.1"
jsonwebtoken = "10.4.0"
mime_guess = "2.0.5"
rust-embed = { version = "8.11.0", features = ["actix"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
