[package]
name = "fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = { version = "4.13.0", features = ["cookies"] }
base64 = "0.22.1"
bcrypt = "0.19.1"
blake2 = "0.10.6"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
mime = "0.3.17"
mime_guess = "2.0.5"
rust-embed = { version = "8.11.0", features = ["actix"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
uuid = {version = "1.23.5", features = ["v4"]}

[build-dependencies]
winresource = "0.1"
